--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,12 +3,14 @@
       relink: true
 
 - shell:
-  - command: git submodule update --init --recursive
-    description: Installing submodules 
-      
-- clean: ['~']
+    - command: git submodule update --init --recursive
+      description: Installing submodules
+
+- clean: ["~"]
 
 - crossplatform-link:
+    ~/.aliasrc:
+      path: alias
     ~/.config/systemd/emacs.service:
       path: systemd/emacs.service
       platform: linux
@@ -53,9 +55,6 @@
     ~/.config/fish/config.fish:
       path: fish/config.fish
       force: true
-    ~/.config/fish/nvm.fish:
-      path: fish/nvm.fish
-      force: true
     ~/.config/omf:
       path: omf
       force: true
@@ -86,17 +85,17 @@
     - ~/.vim/undo-history
 
 - crossplatform-shell:
-  - command: cd ./aria2_rpc && ./mac_install.sh
-    description: Add aria2 rpc services 
-    platform: darwin
-  - command: pip3 install pynvim
-    description: install pynvim
-  - command: touch ~/.config/aria2_rpc/aria2.session 
-    description: touch empty aria2 session
-  - command: pip3 install --user alacritty-colorscheme
-    description: install alacritty color cli 
-  - command: git clone https://github.com/chriskempson/base16-shell.git ~/.config/base16-shell
-    description: base16 shell 
-  - command: cd ./alacritty/color_scripts/ && python3 _genscripts.py
-    description: generate color scripts 
-  - command: git config --global core.excludesfile ~/.gitignore
+    - command: cd ./aria2_rpc && ./mac_install.sh
+      description: Add aria2 rpc services
+      platform: darwin
+    - command: pip3 install pynvim
+      description: install pynvim
+    - command: touch ~/.config/aria2_rpc/aria2.session
+      description: touch empty aria2 session
+    - command: pip3 install --user alacritty-colorscheme
+      description: install alacritty color cli
+    - command: git clone https://github.com/chriskempson/base16-shell.git ~/.config/base16-shell
+      description: base16 shell
+    - command: cd ./alacritty/color_scripts/ && python3 _genscripts.py
+      description: generate color scripts
+    - command: git config --global core.excludesfile ~/.gitignore
